package seedu.omnitravel.error_handlers;

public class OmniException extends Exception {
    public OmniException(String errorMessage){
        super(errorMessage);
    }
}
